# cmpwg_hackjakarta

./: .gitignore  LICENSE  README.md  agentic_mode_script.py  app.py  calories-counter.ipynb  cohere_api_test.py  financial-agent.ipynb  index.html  pyproject.toml  requirements.txt  sentiment.json  utils.py
data/: gmr_metrics.csv
docs/: bakso_3.jpeg&width=640&height=427
frontend_streamlit/: app.py
frontend_streamlit/pages/: create_menu.py  inventory.py  menu_collage.py
pages/: create_menu.py  menu_collage.py
src/: financial-agent.py  financial_calculator.py
src/data-generator/: food-dummy-generator.py  merchant-trx-dummy.py
src/financial_agent/: agent.py  config.py  data_loader.py  feedback.py  financial_calculator.py  main.py  preamble.py
src/health_agent/: calories_flag.py  calories_flag_cohere.py  merchant_health.py
src/image-enhancer/: image_lab.py
src/image_agent/: enhance.py  merchant_img.py  ocr.py
