[tool.poetry]
name = "cmpwg-hackjakarta"
version = "0.1.0"
description = "Hackathon project of CMPWG team for Hackjakarta 2024"
authors = ["sanggusti <gustiowinata0@gmail.com>, cindyangelira <cindybtari@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
cohere = "^5.6.2"
fastapi = "^0.111.1"
pillow = "^10.4.0"
pyyaml = "^6.0.1"
sqlalchemy = "^2.0.31"
aiofiles = "^24.1.0"
alembic = "^1.13.2"
python-dotenv = "^1.0.1"
pyjwt = "^2.8.0"
typing-extensions = "^4.12.2"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"
matplotlib = "^3.9.1"
langchain = "^0.2.11"
langchain-experimental = "^0.0.63"
hnswlib = "^0.8.0"
unstructured = "^0.15.0"
streamlit = "^1.37.0"
faker = "^26.0.0"
langchain-cohere = "^0.1.9"
pinecone-client = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
